crates/quaffed/tests/snapshots/end_to_end__a_bare_query_finds_every_match_in_the_project.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - TODO
---
success: true
exit_code: 0
----- stdout -----
app.py:2:23-2:26: TODO
pkg/client.py:1:3-1:6: TODO
pkg/client.py:3:13-3:16: TODO
pkg/client.py:3:18-3:21: TODO

----- stderr -----
