crates/quaffed/tests/snapshots/end_to_end__a_binary_file_does_not_fail_an_assertion.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - "-e"
    - "find \"TODO\" expect none"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
quaff: 1 binary file not searched
