crates/quaffed/tests/snapshots/end_to_end__a_fenced_operand_holds_its_own_delimiter.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - "-e"
    - "find \"\"\" say \"hi\" \"\"\"; find \"C:\\temp\""
---
success: true
exit_code: 0
----- stdout -----
a.txt:1:1-1:8: say "hi"
a.txt:1:14-1:20: C:\temp

----- stderr -----
