crates/quaffed/tests/snapshots/end_to_end__a_file_that_cannot_be_read_stops_the_run_naming_it.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - TODO
---
success: false
exit_code: 7
----- stdout -----

----- stderr -----
quaff: reading "pkg/client.py": Permission denied (os error 13)
