crates/quaffed/tests/snapshots/end_to_end__a_find_without_an_expect_after_a_block_still_runs_when_the_block_holds.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - "-e"
    - "find \"TODO\" expect 2; find \"def\""
    - src
---
success: true
exit_code: 0
----- stdout -----
src/app.py:2:21-2:24: TODO
src/lib.py:1:3-1:6: TODO
src/app.py:1:1-1:3: def

----- stderr -----
