crates/quaffed/tests/snapshots/end_to_end__a_program_with_no_statements_exits_3_naming_its_sources-3.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - "-e"
    - ""
    - "-e"
    - "find \"Client\""
    - src
---
success: true
exit_code: 0
----- stdout -----
src/lib.py:2:7-2:12: Client

----- stderr -----
