crates/quaffed/tests/snapshots/end_to_end__a_program_with_no_statements_exits_3_naming_its_sources.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - "-e"
    - ""
---
success: false
exit_code: 3
----- stdout -----

----- stderr -----
quaff: nothing to run: -e expression 1 has no statements, only blank lines and comments
